--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "controls-gui",
   "version": "1.0.0",
   "description": "A GUI for managing state",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "budo --open --live --host localhost examples/gui.js",
     "build:example": "rm -rf docs && mkdir -p docs && browserify examples/gui.js -t es2020 -t [ envify --NODE_ENV production ] | uglifyjs -cm |  indexhtmlify > docs/index.html",
