--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "controls-gui",
   "version": "1.0.0",
   "description": "A GUI for managing state",
-  "main": "index.js",
+  "main": "dist/controls-gui.min.js",
   "scripts": {
-    "start": "budo --open --live --host localhost examples/gui.js",
-    "build:example": "rm -rf docs && mkdir -p docs && browserify examples/gui.js -t es2020 -t [ envify --NODE_ENV production ] | uglifyjs -cm |  indexhtmlify > docs/index.html",
-    "build:rollup": "npm run bundle:rollup && npm run minify:rollup"
+    "build": "npm run bundle:rollup && npm run minify:rollup",
+    "bundle:rollup": "mkdir -p dist && rollup -c",
+    "minify:rollup": "uglifyjs -cm -o dist/controls-gui.min.js dist/controls-gui.js",
+    "start": "budo --open --live --host localhost examples/controls-gui.js",
+    "build:example": "rm -rf docs && mkdir -p docs && browserify examples/gui.js -t es2020 -t [ envify --NODE_ENV production ] | uglifyjs -cm | indexhtmlify > docs/index.html"
   },
   "keywords": [],
   "author": "Ricky Reusser",
@@ -17,7 +19,18 @@
     "preact": "^8.4.2"
   },
   "devDependencies": {
+    "envify": "^4.1.0",
+    "es2020": "^1.1.9",
     "h": "^0.1.0",
-    "json-beautify": "^1.0.1"
+    "indexhtmlify": "^2.0.0",
+    "json-beautify": "^1.0.1",
+    "rollup": "^1.7.3",
+    "rollup-plugin-browserify-transform": "^1.0.1",
+    "rollup-plugin-commonjs": "^9.2.2",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "semistandard": "^12.0.1",
+    "tap-spec": "^5.0.0",
+    "tape": "^4.9.1",
+    "uglify-js": "^3.5.2"
   }
 }
