Add budo to devDependencies

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preact": "^8.4.2"
   },
   "devDependencies": {
+    "budo": "^11.6.3",
     "envify": "^4.1.0",
     "es2020": "^1.1.9",
     "h": "^0.1.0",
